--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ server.port=2002
 #服务中心的域
 eureka.client.serviceUrl.defaultZone=http://localhost:5555/eureka/,http://localhost:5556/eureka/
 
+#feign的超时时间和hystrix的超时时间只有一个生效，开关feign.hystrix.enabled
+#是否启用熔断器，超时时间由feign决定
+feign.hystrix.enabled=true
+host.feign.request.connectTimeoutMillis=50000
+host.feign.request.readTimeoutMillis=50000
+
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=50000
