熔断器超时时间设置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ server.port=2002
 eureka.client.serviceUrl.defaultZone=http://localhost:5555/eureka/,http://localhost:5556/eureka/
 
 #feign的超时时间和hystrix的超时时间只有一个生效，开关feign.hystrix.enabled
-#是否启用熔断器，超时时间由feign决定
+#是否启用熔断器走fallback，超时时间必须同时设置feign和hystrix，以最小的为准，且配置fegin Request.Options才生效，扯淡
 feign.hystrix.enabled=true
 host.feign.request.connectTimeoutMillis=50000
 host.feign.request.readTimeoutMillis=50000
-
-#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=50000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=50000
+#针对@HystrixCommand的方法重写超时时间开启
+spring.main.allow-bean-definition-overriding=true
