--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ host.feign.request.readTimeoutMillis=50000
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=50000
 #针对@HystrixCommand的方法重写超时时间开启
 spring.main.allow-bean-definition-overriding=true
+management.endpoints.web.exposure.include=*
