--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=50000
 #针对@HystrixCommand的方法重写超时时间开启
 spring.main.allow-bean-definition-overriding=true
 management.endpoints.web.exposure.include=*
+eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
