--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
 spring.application.name=user
-server.port=2002
+server.port=2003
 #服务中心的域
 eureka.client.serviceUrl.defaultZone=http://localhost:5555/eureka/,http://localhost:5556/eureka/
 
@@ -13,3 +13,8 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=50000
 spring.main.allow-bean-definition-overriding=true
 management.endpoints.web.exposure.include=*
 eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
+#uri或者serviceId
+#spring.cloud.config.uri=http://localhost:8889
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config
+spring.cloud.config.profile=test
