--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -18,3 +18,11 @@ eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config
 spring.cloud.config.profile=test
+
+
+feign.compression.request.enabled=true
+feign.compression.response.enabled=true
+# 配置压缩支持的MIME TYPE
+feign.compression.request.mime-types=text/xml,application/xml,application/json
+# 配置压缩数据大小的下限
+feign.compression.request.min-request-size=2048
