feignClient的日志级别

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -19,10 +19,16 @@ spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config
 spring.cloud.config.profile=test
 
-
+#Gzip配置
 feign.compression.request.enabled=true
 feign.compression.response.enabled=true
 # 配置压缩支持的MIME TYPE
 feign.compression.request.mime-types=text/xml,application/xml,application/json
 # 配置压缩数据大小的下限
 feign.compression.request.min-request-size=2048
+
+#根据feignClient单独配置日志级别
+logging.level.com.example.user.service.ProductService=debug
+
+
+
