feign超时的设置修改

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -5,9 +5,19 @@ eureka.client.serviceUrl.defaultZone=http://localhost:5555/eureka/,http://localh
 
 #feign的超时时间和hystrix的超时时间只有一个生效，开关feign.hystrix.enabled
 #是否启用熔断器走fallback，超时时间必须同时设置feign和hystrix，以最小的为准，且配置fegin Request.Options才生效，扯淡
+#host.feign.request.connectTimeoutMillis=50000
+#host.feign.request.readTimeoutMillis=50000
+
+#feign超时分两层，ribbon和hystrix超时，都得设置
+#ribbon超时，默认2s。方式一（推荐）:
+ribbon.ReadTimeout=50000
+ribbon.ConnectTimeout=50000
+#ribbon超时，默认2s。方式二:还得配置RiskClientsConfiguration，太麻烦
+#host.feign.request.connectTimeoutMillis=50000
+#host.feign.request.readTimeoutMillis=50000
+
+#hystrix超时，默认1s
 feign.hystrix.enabled=true
-host.feign.request.connectTimeoutMillis=50000
-host.feign.request.readTimeoutMillis=50000
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=50000
 #针对@HystrixCommand的方法重写超时时间开启
 spring.main.allow-bean-definition-overriding=true
