使用Apache HttpClient替换Feign原生httpclient(JDK URLConnection)

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -40,5 +40,9 @@ feign.compression.request.min-request-size=2048
 #根据feignClient单独配置日志级别
 logging.level.com.example.user.service.ProductService=debug
 
+#使用Apache HttpClient替换Feign原生httpclient
+feign.httpclient.enabled=true
+
+
 
 
