--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -41,7 +41,10 @@ feign.compression.request.min-request-size=2048
 logging.level.com.example.user.service.ProductService=debug
 
 #使用Apache HttpClient替换Feign原生httpclient
-feign.httpclient.enabled=true
+feign.httpclient.enabled=false
+#启用okhttp
+feign.okhttp.enabled=true
+
 
 
 
