--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
         <!--config客户端-->
+
         <!-- 使用Apache HttpClient替换Feign原生httpclient -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -75,6 +76,13 @@
             <artifactId>feign-httpclient</artifactId>
             <version>8.17.0</version>
         </dependency>
+        <!-- 使用Apache HttpClient替换Feign原生httpclient -->
+        <!--okhttp-->
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-okhttp</artifactId>
+        </dependency>
+        <!--okhttp-->
     </dependencies>
 
 
