--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,19 @@
             <artifactId>feign-okhttp</artifactId>
         </dependency>
         <!--okhttp-->
+
+        <!-- Feign文件上传-->
+        <dependency>
+            <groupId>io.github.openfeign.form</groupId>
+            <artifactId>feign-form</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.openfeign.form</groupId>
+            <artifactId>feign-form-spring</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+        <!-- Feign文件上传-->
     </dependencies>
 
 
