--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,7 +1,7 @@
 spring.application.name=user
 server.port=2008
 
-#服务中心的域
+#服务中心的域k
 eureka.client.serviceUrl.defaultZone=http://localhost:5555/eureka/,http://localhost:5556/eureka/
 
 #feign的超时时间和hystrix的超时时间只有一个生效，开关feign.hystrix.enabled
