turbine集群监控添加

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -46,6 +46,9 @@ feign.httpclient.enabled=false
 #∆Ù”√okhttp
 feign.okhttp.enabled=true
 
+turbine.appConfig=product,uploadServer
+turbine.clusterNameExpression="'default'"
+
 
 
 
