--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,13 @@
             <version>3.0.3</version>
         </dependency>
         <!-- Feign文件上传-->
+        <!--turbine-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-turbine</artifactId>
+        </dependency>
+        <!--turbine-->
+
     </dependencies>
 
 
