--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,55 +1,53 @@
 spring.application.name=user
 server.port=2008
 
-#·şÎñÖĞĞÄµÄÓòk
+#æœåŠ¡ä¸­å¿ƒçš„åŸŸk
 eureka.client.serviceUrl.defaultZone=http://localhost:5555/eureka/,http://localhost:5556/eureka/
 
-#feignµÄ³¬Ê±Ê±¼äºÍhystrixµÄ³¬Ê±Ê±¼äÖ»ÓĞÒ»¸öÉúĞ§£¬¿ª¹Øfeign.hystrix.enabled
-#ÊÇ·ñÆôÓÃÈÛ¶ÏÆ÷×ßfallback£¬³¬Ê±Ê±¼ä±ØĞëÍ¬Ê±ÉèÖÃfeignºÍhystrix£¬ÒÔ×îĞ¡µÄÎª×¼£¬ÇÒÅäÖÃfegin Request.Options²ÅÉúĞ§£¬³¶µ­
+#feignçš„è¶…æ—¶æ—¶é—´å’Œhystrixçš„è¶…æ—¶æ—¶é—´åªæœ‰ä¸€ä¸ªç”Ÿæ•ˆï¼Œå¼€å…³feign.hystrix.enabled
+#æ˜¯å¦å¯ç”¨ç†”æ–­å™¨èµ°fallbackï¼Œè¶…æ—¶æ—¶é—´å¿…é¡»åŒæ—¶è®¾ç½®feignå’Œhystrixï¼Œä»¥æœ€å°çš„ä¸ºå‡†ï¼Œä¸”é…ç½®fegin Request.Optionsæ‰ç”Ÿæ•ˆï¼Œæ‰¯æ·¡
 #host.feign.request.connectTimeoutMillis=50000
 #host.feign.request.readTimeoutMillis=50000
 
-#feign³¬Ê±·ÖÁ½²ã£¬ribbonºÍhystrix³¬Ê±£¬¶¼µÃÉèÖÃ
-#ribbon³¬Ê±£¬Ä¬ÈÏ2s¡£·½Ê½Ò»£¨ÍÆ¼ö£©:
+#feignè¶…æ—¶åˆ†ä¸¤å±‚ï¼Œribbonå’Œhystrixè¶…æ—¶ï¼Œéƒ½å¾—è®¾ç½®
+#ribbonè¶…æ—¶ï¼Œé»˜è®¤2sã€‚æ–¹å¼ä¸€ï¼ˆæ¨èï¼‰:
 ribbon.ReadTimeout=50000
 ribbon.ConnectTimeout=50000
-#ribbon³¬Ê±£¬Ä¬ÈÏ2s¡£·½Ê½¶ş:»¹µÃÅäÖÃRiskClientsConfiguration£¬Ì«Âé·³
+#ribbonè¶…æ—¶ï¼Œé»˜è®¤2sã€‚æ–¹å¼äºŒ:è¿˜å¾—é…ç½®RiskClientsConfigurationï¼Œå¤ªéº»çƒ¦
 #host.feign.request.connectTimeoutMillis=50000
 #host.feign.request.readTimeoutMillis=50000
 
-#hystrix³¬Ê±£¬Ä¬ÈÏ1s
+#hystrixè¶…æ—¶ï¼Œé»˜è®¤1s
 feign.hystrix.enabled=true
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=50000
-#Õë¶Ô@HystrixCommandµÄ·½·¨ÖØĞ´³¬Ê±Ê±¼ä¿ªÆô
+#é’ˆå¯¹@HystrixCommandçš„æ–¹æ³•é‡å†™è¶…æ—¶æ—¶é—´å¼€å¯
 spring.main.allow-bean-definition-overriding=true
 management.endpoints.web.exposure.include=*
 eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
-#uri»òÕßserviceId
+#uriæˆ–è€…serviceId
 #spring.cloud.config.uri=http://localhost:8889
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config
 spring.cloud.config.profile=test
 
-#GzipÅäÖÃ
+#Gzipé…ç½®
 feign.compression.request.enabled=true
 feign.compression.response.enabled=true
-# ÅäÖÃÑ¹ËõÖ§³ÖµÄMIME TYPE
+# é…ç½®å‹ç¼©æ”¯æŒçš„MIME TYPE
 feign.compression.request.mime-types=text/xml,application/xml,application/json
-# ÅäÖÃÑ¹ËõÊı¾İ´óĞ¡µÄÏÂÏŞ
+# é…ç½®å‹ç¼©æ•°æ®å¤§å°çš„ä¸‹é™
 feign.compression.request.min-request-size=2048
 
-#¸ù¾İfeignClientµ¥¶ÀÅäÖÃÈÕÖ¾¼¶±ğ
+#æ ¹æ®feignClientå•ç‹¬é…ç½®æ—¥å¿—çº§åˆ«
 logging.level.com.example.user.service.ProductService=debug
 
-#Ê¹ÓÃApache HttpClientÌæ»»FeignÔ­Éúhttpclient
+#ä½¿ç”¨Apache HttpClientæ›¿æ¢FeignåŸç”Ÿhttpclient
 feign.httpclient.enabled=false
-#ÆôÓÃokhttp
+#å¯ç”¨okhttp
 feign.okhttp.enabled=true
 
 turbine.appConfig=product,uploadServer
 turbine.clusterNameExpression="'default'"
-
-
 
 
 
